<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Epic WoW Quiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_game">Continue</string>
    <string name="new_game">New Game</string>
    <string name="help">Help</string>
    <string name="quit">Quit</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="insane">Insane</string>

    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="no_medal">No medal</string>

    <string name="question">Question:</string>
    <string name="next">Next</string>

    <string name="your_score">Your score: </string>
    <string name="medal_earned">Medal earned: </string>
    <string name="another_game">Another game!</string>
    <string name="back_to_main_menu">Back to Main Menu</string>

    <string name="alliance">Disciples of War</string>
    <string name="horde">Disciples of Magic</string>

    <string name="no_rank">Unranked</string>

    <string name="no_rankmagic">Private</string>
    <string name="no_rankwar">Scout</string>

    <string name="rank1magic">Sergeant</string>
    <string name="rank2magic">Knight</string>
    <string name="rank3magic">Commander</string>
    <string name="rank4magic">General</string>

    <string name="rank1war">Sergeant</string>
    <string name="rank2war">Centurion</string>
    <string name="rank3war">Champion</string>
    <string name="rank4war">Warlord</string>

    <string name="dialog_text">You will lose previously achieved rank and medals.\n\nContinue?</string>
    <string name="dialog_title">Warning</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="ad_unit_id">ca-app-pub-8031089145800276/5774199742</string>

    <string name="help1">Welcome to unofficial World of Warcraft Quiz, the Epic Wow Quiz!</string>

    <string name="help2">How to play?</string>

    <string name="help3">First, customize your character profile</string>

    <string name="help4">You can test your Warcraft knowledge by playing Easy, Medium or Hard tier.\n\nEach tier contains ten, randomly generated, questions. Depending on your score, you can be awarded with Bronze, Silver or Golden medal.</string>

    <string name="help5">Each faction also has its own progression path.\nThe better medals you manage to get, the higher rank you will be rewarded with!</string>

    <string name="help6">There is a rumor that something special can happen if you manage to master the quiz by getting the Gold medal in all three tiers... Good luck!</string>

    <string name="help7">Disclaimer:\nEpic WoW quiz is not a product made by Blizzard Entertainment. It is unofficial game related to the Warcraft universe. Used graphic assets are property of Blizzard Entertainment.\n\n©2004 Blizzard Entertainment, Inc. All rights reserved. World of Warcraft, Warcraft and Blizzard Entertainment are trademarks or registered trademarks of Blizzard Entertainment, Inc. in the U.S. and/or other countries.</string>

</resources>
