<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.mobinautsoftware.epicwowquiz.SummaryFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/outerLinearLayout">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/your_score"
                android:padding="5dp"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="5dp"
                android:layout_centerVertical="true"
                android:id="@+id/scoreTextView"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/medal_earned"
            android:paddingTop="15dp"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp"
            android:id="@+id/linearLayout">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_launcher"
                android:id="@+id/medalImageView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="medal type"
                android:padding="5dp"
                android:layout_centerVertical="true"
                android:id="@+id/medalNameTextView"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/another_game"
            android:id="@+id/anotherGameButton"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_main_menu"
            android:id="@+id/backButton"/>
    </LinearLayout>

</RelativeLayout>
